--- a/user_auth/templates/dashboard.html
+++ b/user_auth/templates/dashboard.html
@@ -41,7 +41,7 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="#">All</a></li>
-                  <li><a class="dropdown-item" href="#">Kemenkeu</a></li>
+                  <li><a class="dropdown-item" href="{% url 'test' %}">Kemenkeu</a></li>
                   <li><a class="dropdown-item" href="#">Setjen</a><li>
                   <li><a class="dropdown-item" href="#">DJA</a></ l>
                   <li><a class="dropdown-item" href="#">DJP</a></li>
