--- a/user_auth/templates/items/navbar.html
+++ b/user_auth/templates/items/navbar.html
@@ -4,7 +4,7 @@
     <div class="container-fluid" style="padding-left: 49px;">
       <div class="row justify-content-center align-items-center">
         <div class="col col-2">
-          <a class="navbar-brand" href="{% url 'home' %}">
+          <a class="navbar-brand" href="{% url 'dashboard' %}">
             <img src="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png" alt="" width="55" height="51" class="d-inline-block align-text-top">
           </a>
         </div>
