fix: fixing input agenda setting page

--- a/input_agenda_setting/templates/input-as.html
+++ b/input_agenda_setting/templates/input-as.html
@@ -71,11 +71,11 @@
               </div>
               <div class="pb-3">
                 <label for="pesan_kunci" class="form-label">Pesan Kunci</label>
-                <textarea type="text" class="form-control" id="pesan_kunci" name="pesan_kunci" placeholder="input key message" required>
+                <input type="text" class="form-control" id="pesan_kunci" name="pesan_kunci" placeholder="input key message" required>
               </div>
               <div class="pb-3">
                 <label for="sub_pesan_kunci" class="form-label">Sub Pesan Kunci</label>
-                <textarea type="text" class="form-control" id="sub_pesan_kunci" name="sub_pesan_kunci" placeholder="input sub key message" required>
+                <input type="text" class="form-control" id="sub_pesan_kunci" name="sub_pesan_kunci" placeholder="input sub key message" required>
               </div>
             <!-- Submit Button -->
             <div class="col-md-12 d-flex justify-content-center" style="padding-top: 80px;">
