--- a/similarity_checker/templates/text_similarity_ue1.html
+++ b/similarity_checker/templates/text_similarity_ue1.html
@@ -1,83 +1,124 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Text Similarity Checker</title>
+{% if error %}
+  <p>{{ error }}</p>
+{% endif %}
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="../static/css/dashboard.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="../static/js/bootstrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-    <h1>Text Similarity Checker</h1>
-    <p>Agenda: {{ agenda_setting.topik_agenda }}</p>
 
-    <h2>Text Similarity for UE1: {{ ue1 }}</h2>
-    <p>Average Similarity: {{ average_similarity }}</p>
+    <title>Similarity Checker</title>
+    <link rel="icon" type="image/x-icon" href="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png">
+  </head>
 
-    <h2>Graph for UE1: {{ ue1 }}</h2>
-    <div style="width: 80%; margin: auto;">
-        <canvas id="myChart"></canvas>
-    </div>
-    <script>
-        var labels = {{ labels_json|safe }};
-        var data = {{ data_json|safe }};
+  <body>
+  <!-- Navbar -->
+  {% block navbar %}
+    {% include './items/navbar.html' %}
+  {% endblock %}
+  
 
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var chart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: labels,
-                datasets: [{
-                    label: 'Average Accuracy (%)',
-                    data: data,
-                    backgroundColor: '#EFB829',
-                    borderColor: '#EFB829',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    zoom: {
-                        zoom: {
-                            enabled: true,
-                            mode: 'xy'
-                        },
-                        pan: {
-                            enabled: true,
-                            mode: 'xy'
-                        }
+  <!-- MAIN -->
+  <section>
+    <div class="container-fluid" style="height: 568px;">
+      <div class="row d-flex justify-content-center">
+        
+        <div class="col-md-5" style="padding-left: 90px; padding-top: 44px;">
+          <div class="row d-flex justify-content-center">
+            <h2 class="text-center" style="font-size: 20px; font-weight: 700;">Text Similarity for UE1: {{ ue1 }}</h2>
+            <p style="font-size: 14px; font-weight: 700;">Agenda: {{ agenda_setting.topik_agenda }}</p>
+            <p style="font-size: 14px; font-weight: 700;">Average Similarity: {{ average_similarity }}</p>
+
+            <h2 class="text-center" style="font-size: 20px; font-weight: 700;">Graph for UE1: {{ ue1 }}</h2>
+            <div style="width: 80%; margin: auto;">
+                <canvas id="myChart"></canvas>
+            </div>
+            <script>
+                var labels = {{ labels_json|safe }};
+                var data = {{ data_json|safe }};
+
+                var ctx = document.getElementById('myChart').getContext('2d');
+                var chart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: 'Average Accuracy (%)',
+                            data: data,
+                            backgroundColor: '#EFB829',
+                            borderColor: '#EFB829',
+                            borderWidth: 1
+                        }]
                     },
-                    scales: {
-                        y: {
-                            beginAtZero: true,
-                            min: 0,             
-                            max: 100,
-                            ticks: {
-                                stepSize: 10,
-                                callback: function(value) {
+                    options: {
+                        responsive: true,
+                        plugins: {
+                            zoom: {
+                                zoom: {
+                                    enabled: true,
+                                    mode: 'xy'
+                                },
+                                pan: {
+                                    enabled: true,
+                                    mode: 'xy'
+                                }
+                            },
+                            scales: {
+                                y: {
+                                    beginAtZero: true,
+                                    min: 0,             
+                                    max: 100,
+                                    ticks: {
+                                        stepSize: 10,
+                                        callback: function(value) {
+                                            return value + '%';
+                                        }
+                                    }
+                                }
+                            },
+                            legend: {
+                                display: false
+                            },
+                            title: {
+                                display: true,
+                                text: 'Agenda Setting Accuracy',
+                                align: 'center',
+                                fontColor: '#EFB829'
+                            },
+                            datalabels: {
+                                anchor: 'end',
+                                align: 'top',
+                                formatter: (value) => {
                                     return value + '%';
                                 }
                             }
                         }
-                    },
-                    legend: {
-                        display: false
-                    },
-                    title: {
-                        display: true,
-                        text: 'Agenda Setting Accuracy',
-                        align: 'center',
-                        fontColor: '#EFB829'
-                    },
-                    datalabels: {
-                        anchor: 'end',
-                        align: 'top',
-                        formatter: (value) => {
-                            return value + '%';
-                        }
                     }
-                }
-            }
-        });
-    </script>
+                });
+            </script>
             <a href="{% url 'download_agenda_accuracy' ue1 %}" class="btn btn-primary">Download Excel</a>
-</body>
+	    </div>
+      </div>
+    </div>
+  </section>  
+
+  <!-- footer -->
+  {% block footer %}
+    {% include './items/footer.html' %}
+  {% endblock %}
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </html>
