--- a/user_auth/templates/items/navbar.html
+++ b/user_auth/templates/items/navbar.html
@@ -39,7 +39,7 @@
               {% endif %}
               {% if user.roles != 'petugas_input_agenda_setting' %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'similarity-checker' %}">Similarity Checker</a>
+                  <a class="nav-link" href="{% url 'dashboard_similarity_checker' %}">Similarity Checker</a>
                 </li>
               {% endif %}
               <li class="nav-item" style="padding-right: 59px;">
