--- a/socmed_data/templates/instagram/instagram_detail_db.html
+++ b/socmed_data/templates/instagram/instagram_detail_db.html
@@ -12,13 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+    <link rel="stylesheet" href="../../static/css/instagram_detail_api.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="{% static 'css/dashboard.css' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../../static/js/bootstrap.js"></script>
 
-    <title>Similarity Checker</title>
-    <link rel="icon" type="image/x-icon" href="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png">
+    <title>Instagram Post Information</title>
+    <link rel="icon" type="image/x-icon" href="../../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png">
   </head>
 
   <body>
@@ -76,95 +75,107 @@
       </div>
     </nav>
   </section>
-  
+
 
   <!-- MAIN -->
   <section>
-    <div class="container-fluid" style="height: 568px;">
-      <div class="row d-flex justify-content-center">
-        
-        <div class="col-md-5" style="padding-left: 90px; padding-top: 44px;">
-          <div class="row d-flex justify-content-center">
-            <h2 class="text-center" style="font-size: 20px; font-weight: 700;">Text Similarity for UE1: {{ ue1 }}</h2>
-            <p style="font-size: 14px; font-weight: 700;">Agenda: {{ agenda_setting.topik_agenda }}</p>
-            <p style="font-size: 14px; font-weight: 700;">Average Similarity: {{ average_similarity|floatformat:2 }}</p>
+    <div class="container" style="height: 648px;">
+      <div class="row d-flex justify-content-center" style="padding-top: 50px;">
 
-            <h2 class="text-center" style="font-size: 20px; font-weight: 700;">Graph for UE1: {{ ue1 }}</h2>
-            <div style="width: 80%; margin: auto;">
-                <canvas id="myChart"></canvas>
-            </div>
-            <script>
-                var labels = {{ labels_json|safe }};
-                var data = {{ data_json|safe }};
+        <!-- Statistic User -->
+        <h1 class="text-center" style="font-size: 20px; font-weight: 700; padding-bottom: 20px;">Instagram Post Information (API)</h1>
 
-                data = data.map(function(value) {
-                  return value * 100;
-                });
+        <div class="col-md-2">
+          <p style="font-size: 14px; font-weight: 700;">Unit Eselon 1<br>Start Date - End Date<br>Account URL<br>Followers<br>Posts<br></p>
+        </div>
+        <div class="col-md-10">
+          <p style="font-size: 14px; font-weight: 700;">: Kemenkeu<br>: Aug. 8, 2023, midnight - Aug. 8, 2023, 11:59 p.m.<br>: https://www.instagram.com/smindrawati/<br>: 2353745<br>: 2732<br></p>
+        </div>
 
-                var ctx = document.getElementById('myChart').getContext('2d');
-                var chart = new Chart(ctx, {
-                    type: 'bar',
-                    data: {
-                        labels: labels,
-                        datasets: [{
-                            label: 'Average Accuracy (%)',
-                            data: data,
-                            backgroundColor: '#EFB829',
-                            borderColor: '#EFB829',
-                            borderWidth: 1
-                        }]
-                    },
-                    options: {
-                        responsive: true,
-                        plugins: {
-                            zoom: {
-                                zoom: {
-                                    enabled: true,
-                                    mode: 'xy'
-                                },
-                                pan: {
-                                    enabled: true,
-                                    mode: 'xy'
-                                }
-                            },
-                            scales: {
-                                y: {
-                                    beginAtZero: true,
-                                    min: 0,             
-                                    max: 100,
-                                    ticks: {
-                                        stepSize: 10,
-                                        callback: function(value) {
-                                            return value + '%';
-                                        }
-                                    }
-                                }
-                            },
-                            legend: {
-                                display: false
-                            },
-                            title: {
-                                display: true,
-                                text: 'Agenda Setting Accuracy',
-                                align: 'center',
-                                fontColor: '#EFB829'
-                            },
-                            datalabels: {
-                                anchor: 'end',
-                                align: 'top',
-                                formatter: (value) => {
-                                    return value + '%';
-                                }
-                            }
-                        }
-                    }
-                });
-            </script>
-            <a href="{% url 'download_agenda_accuracy' ue1 %}" class="btn-option">Download Excel</a>
-	    </div>
+        <!-- Table User -->
+        <div class="col-md-12"  style="padding-top: 8px;">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Post URLs</th>
+                <th scope="col">Likes</th>
+                <th scope="col">Comments</th>
+                <th scope="col">Viewers</th>
+                <th scope="col">Captions</th>
+              </tr>
+            </thead>
+
+            <!-- Get data user from database-->
+            <tbody>
+              <tr>
+                <td>https://www.instagram.com/p/CvrtD2RpKi0</td>
+                <td>919</td>
+                <td>13</td>
+                <td>None</td>
+                <td>
+                  <!-- Button trigger modal -->
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Caption
+                  </button>
+                  <a class="btn btn-warning" href="{% url 'similarity-checker' %}" role="button">Verifikasi</a>
+
+                  <!-- Modal -->
+                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Caption</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          Pemerintah memiliki komitmen yang sangat serius pada dunia pendidikan. Hal ini terlihat dari kewajiban alokasi APBN #UangKita sebesar 20% di sektor ini. Hari ini, saya bersama dengan Pak @suahasil (yang sama-sama masih memiliki NIP dosen 13) dan jajaran @kemenkeuri lainnya berbincang dengan Prof. Ir. Nizam (Plt. Dirjen Dikti @kemendikbud.ri) terkait bagaimana kita bisa lebih memaksimalkan alokasi ini. Fokus pembicaraan kami adalah tentang pendanaan PTNBH kelas dunia yang berkelanjutan. Kami ingin mendengar dari Prof. Nizam supaya mendapatkan perspektif baru terkait pengelolaan anggaran ini. Selama berbincang, kami sepakat bahwa yang harus menjadi fokus kita adalah what is within our control. Model bisnis dan tata kelola harus terus kita evaluasi dan perbaiki. Tujuannya, supaya Indonesia memiliki perguruan tinggi yang kelas dunia. Masuk di ranking 100 besar dunia. Perlu bauran kebijakan dari beragam aspek disini. Tidak hanya di dalam universitasnya, namun juga dalam ekosistemnya..! Sebagai seseorang yang sangat dekat dengan dunia pendidikan, saya pastikan @kemenkeuri dan APBN #UangKita akan terus hadir mendukung dunia pendidikan di Indonesia..! Dari Dialog dengan Plt. Direktur Jenderal Pendidikan Tinggi, Prof. Ir. Nizam, M.Sc., DIC, Ph.D., IPU, Asean Eng. Jakarta, 8 Agustus 2023
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>https://www.instagram.com/p/KaSpo91hHa</td>
+                <td>821</td>
+                <td>31</td>
+                <td>None</td>
+                <td>
+                  <!-- Button trigger modal -->
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Caption
+                  </button>
+                  <a class="btn btn-success" href="{% url 'similarity-checker' %}" role="button">Terverifikasi</a>
+
+                  <!-- Modal -->
+                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Caption</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                           ini. Hari ini, saya bersama dengan Pak @suahasil (yang sama-sama masih memiliki NIP dosen 13) dan jajaran @kemenkeuri lainnya berbincang dengan Prof. Ir. Nizam (Plt. Dirjen Dikti @kemendikbud.ri) terkait bagaimana kita bisa lebih memaksimalkan alokasi ini. Fokus pembicaraan kami adalah tentang pendanaan PTNBH kelas dunia yang berkelanjutan. Kami ingin mendengar dari Prof. Nizam supaya mendapatkan perspektif baru terkait pengelolaan anggaran ini. Selama berbincang, kami sepakat bahwa yang harus menjadi fokus kita adalah what is within our control. Model bisnis dan tata kelola harus terus kita evaluasi dan perbaiki. Tujuannya, supaya Indonesia memiliki perguruan tinggi yang kelas dunia. Masuk di ranking 100 besar dunia. Perlu bauran kebijakan dari beragam aspek disini. Tidak hanya di dalam universitasnya, namun juga dalam ekosistemnya..! Sebagai seseorang yang sangat dekat dengan dunia pendidikan, saya pastikan @kemenkeuri dan APBN #UangKita akan terus hadir mendukung dunia pendidikan di Indonesia..! Dari Dialog dengan Plt. Direktur Jenderal Pendidikan Tinggi, Prof. Ir. Nizam, M.Sc., DIC, Ph.D., IPU, Asean Eng. Jakarta, 8 Agustus 2023
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  </section>  
+  </section>
 
   <!-- footer -->
   <section>
@@ -244,10 +255,5 @@
     </div>
   </section>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
