--- a/similarity_checker/templates/similarity-checker.html
+++ b/similarity_checker/templates/similarity-checker.html
@@ -76,39 +76,42 @@
               </div>
               <div class="pb-3">
                 <label for="account_url" class="form-label">Link Account: </label>
-                <input class="form-control" id="account_url" name="account_url" rows="4" required placeholder="https://www.instagram.com/smindrawati/">
+                <input class="form-control" id="account_url" name="account_url" rows="4" value="https://www.instagram.com/smindrawati/" readonly>
               </div>            
               <div class="pb-3">
                 <label for="post_url" class="form-label">Link Post: </label>
-                <input class="form-control" id="post_url" name="post_url" rows="4" required placeholder="https://www.instagram.com/p/CvrtD2RpKi0">
+                <input class="form-control" id="post_url" name="post_url" rows="4" readonly value="https://www.instagram.com/p/CvrtD2RpKi0">
               </div>            
               <div class="pb-3">
                 <label for="captions" class="form-label">Caption: </label>
-                <textarea class="form-control" id="captions" rows="4" name="captions" required placeholder="Pemerintah memiliki komitmen yang sangat serius pada dunia pendidikan. Hal ini terlihat dari kewajiban alokasi APBN #UangKita sebesar 20% di sektor ini. Hari ini, saya bersama dengan Pak @suahasil (yang sama-sama masih memiliki NIP dosen 13) dan jajaran @kemenkeuri lainnya berbincang dengan Prof. Ir. Nizam (Plt. Dirjen Dikti @kemendikbud.ri) terkait bagaimana kita bisa lebih memaksimalkan alokasi ini. Fokus pembicaraan kami adalah tentang pendanaan PTNBH kelas dunia yang berkelanjutan. Kami ingin mendengar dari Prof. Nizam supaya mendapatkan perspektif baru terkait pengelolaan anggaran ini. Selama berbincang, kami sepakat bahwa yang harus menjadi fokus kita adalah what is within our control. Model bisnis dan tata kelola harus terus kita evaluasi dan perbaiki. Tujuannya, supaya Indonesia memiliki perguruan tinggi yang kelas dunia. Masuk di ranking 100 besar dunia. Perlu bauran kebijakan dari beragam aspek disini. Tidak hanya di dalam universitasnya, namun juga dalam ekosistemnya..! Sebagai seseorang yang sangat dekat dengan dunia pendidikan, saya pastikan @kemenkeuri dan APBN #UangKita akan terus hadir mendukung dunia pendidikan di Indonesia..! Dari Dialog dengan Plt. Direktur Jenderal Pendidikan Tinggi, Prof. Ir. Nizam, M.Sc., DIC, Ph.D., IPU, Asean Eng. Jakarta, 8 Agustus 2023"></textarea>
+                <textarea class="form-control" id="captions" rows="4" name="captions" readonly>Pemerintah memiliki komitmen yang sangat serius pada dunia pendidikan. Hal ini terlihat dari kewajiban alokasi APBN #UangKita sebesar 20% di sektor ini. Hari ini, saya bersama dengan Pak @suahasil (yang sama-sama masih memiliki NIP dosen 13) dan jajaran @kemenkeuri lainnya berbincang dengan Prof. Ir. Nizam (Plt. Dirjen Dikti @kemendikbud.ri) terkait bagaimana kita bisa lebih memaksimalkan alokasi ini. Fokus pembicaraan kami adalah tentang pendanaan PTNBH kelas dunia yang berkelanjutan. Kami ingin mendengar dari Prof. Nizam supaya mendapatkan perspektif baru terkait pengelolaan anggaran ini. Selama berbincang, kami sepakat bahwa yang harus menjadi fokus kita adalah what is within our control. Model bisnis dan tata kelola harus terus kita evaluasi dan perbaiki. Tujuannya, supaya Indonesia memiliki perguruan tinggi yang kelas dunia. Masuk di ranking 100 besar dunia. Perlu bauran kebijakan dari beragam aspek disini. Tidak hanya di dalam universitasnya, namun juga dalam ekosistemnya..! Sebagai seseorang yang sangat dekat dengan dunia pendidikan, saya pastikan @kemenkeuri dan APBN #UangKita akan terus hadir mendukung dunia pendidikan di Indonesia..! Dari Dialog dengan Plt. Direktur Jenderal Pendidikan Tinggi, Prof. Ir. Nizam, M.Sc., DIC, Ph.D., IPU, Asean Eng. Jakarta, 8 Agustus 2023</textarea>
               </div>
               <div class="pb-3">
                 <label for="topik" class="form-label">Topik: </label>
-                <input type="text" class="form-control" id="topik" name="topik" required>
+                <input type="text" class="form-control" id="topik" name="topik" readonly value="Testing"> <!--from agenda setting-->
               </div>
               <div class="pb-3">
                 <label for="pesan_kunci" class="form-label">Pesan Kunci: </label>
-                <input type="text" class="form-control" id="pesan_kunci" name="pesan_kunci" placeholder="Pesan1, Pesan2" required>
+                <input type="text" class="form-control" id="pesan_kunci" name="pesan_kunci" readonly value="Indonesia menjaga pertumbuhan ekonomi diatas 5% selama 7 kuartal berturut turut. APBN menjadi instrumen pemulihan ekonomi yang penting dan akan terus mendukung pembangunan seluruh pelosok Indonesia dan perbaikan kesejahteraan rakyat. APBN harus terus dijaga kesehatan dan kredibilitasnya dan diperkuat efektivitas dan akuntabilitasnya agar terus menjadi instrumen pembangunan yang handal, RUU APBN 2024">
               </div>
               <div class="pb-3">
                 <label for="sub_pesan_kunci" class="form-label">Sub Pesan Kunci: </label>
-                <input type="text" class="form-control" id="sub_pesan_kunci" name="sub_pesan_kunci" placeholder="SubPesan1, SubPesan2" required>
+                <input type="text" class="form-control" id="sub_pesan_kunci" name="sub_pesan_kunci" readonly value="Indonesia menjaga pertumbuhan ekonomi diatas 5% selama 7 kuartal berturut turut. APBN menjadi instrumen pemulihan ekonomi yang penting dan akan terus mendukung pembangunan seluruh pelosok Indonesia dan perbaikan kesejahteraan rakyat. APBN harus terus dijaga kesehatan dan kredibilitasnya dan diperkuat efektivitas dan akuntabilitasnya agar terus menjadi instrumen pembangunan yang handal, RUU APBN 2024">
               </div>
               <div class="row">
-                <div class="col-6">
+                <div class="col-4">
+                  <label for="accuracy" class="form-label">Accuracy Automated Checker: </label>
+                  <input type="text" class="form-control" id="accuracy" name="accuracy" readonly value="8%">
+                </div>
+                <div class="col-4">
                   <label for="kesesuaian" class="form-label">Kesesuaian: </label>
                   <select class="form-select" name="kesesuaian" id="kesesuaian" required>
-                    <option selected disabled hidden>Sesuai / Tidak Sesuai</option>
-                    <option value="Sesuai">Sesuai</option>
+                    <option selected value="Sesuai">Sesuai</option> <!--sesuai accuracy automated checker-->
                     <option value="Tidak Sesuai">Tidak Sesuai</option>
                   </div>
                   </select>
                 </div>
-                <div class="col-6"Tidak Sesuai
+                <div class="col-4">
                   <label for="catatan" class="form-label">Catatan</label>
                   <textarea class="form-control" id="catatan" name="catatan" rows="2"></textarea>
                 </div>
