--- a/socmed_data/templates/test.html
+++ b/socmed_data/templates/test.html
@@ -60,11 +60,11 @@
                     <a class="nav-link" href="{% url 'table_input_as' %}">Agenda Setting</a>
                   </li>
                 {% endif %}
-                {% if user.roles != 'petugas_input_agenda_setting' %}
+                <!-- {% if user.roles != 'petugas_input_agenda_setting' %}
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'similarity-checker' %}">Similarity Checker</a>
                   </li>
-                {% endif %}
+                {% endif %} -->
                 <li class="nav-item" style="padding-right: 59px;">
                   <a class="btn-option" href="{% url 'profile' %}" type="submit">Profile</a>
                 </li>
