--- a/input_agenda_setting/templates/table_input-as.html
+++ b/input_agenda_setting/templates/table_input-as.html
@@ -28,12 +28,12 @@
   
   <!-- MAIN -->
   <section>
-    <div class="container" style="height: 648px;">
+    <div class="container" style="height: 560px;">
       <div class="row d-flex justify-content-center" style="padding-top: 50px;">
 
         <!-- Table User -->
         <div class="col-md-12"  style="padding-top: 8px;">
-          <h1 class="text-center" style="font-size: 20px; font-weight: 700;">AGENDA SETTING MINGGU INI</h1>
+          <h1 class="text-center" style="font-size: 20px; font-weight: 700;">AGENDA SETTING</h1>
           <table class="table table-hover">
             <thead>
               <tr>
@@ -61,7 +61,7 @@
               </tr>
             </tbody>
           </table>
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center pt-3">
             <a class="btn-option" href="{% url 'edit_agenda_setting' as.id %}" type="submit">Edit</a>
           </div>
           {% endfor %}
